--- a/sample/application/systemd/fastapi.service
+++ b/sample/application/systemd/fastapi.service
@@ -6,7 +6,7 @@ After=network.target
 User=root
 Group=root
 WorkingDirectory=/root/application
-ExecStart=/usr/local/bin/gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --workers 2
+ExecStart=/usr/local/bin/gunicorn -w 1 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000
 
 [Install]
 WantedBy=multi-user.target
