--- a/sample/web/kubernetes/configmap.yaml
+++ b/sample/web/kubernetes/configmap.yaml
@@ -4,5 +4,4 @@ metadata:
   name: web-env
   namespace: webapp
 data: 
-  # API_SERVER_URL={API-SERVER-URL}
-  API_SERVER_URL: http://app.webapp.svc.cluster.local:8000
+  API_SERVER_URL={API-SERVER-URL}
