--- a/sample/web/kubernetes/deployment.yaml
+++ b/sample/web/kubernetes/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: 909622006439.dkr.ecr.us-east-1.amazonaws.com/web:0.0.1
+        image: {ACCOUNT_ID}.dkr.ecr.{REGION}.amazonaws.com/web:0.0.1
         ports:
         - containerPort: 3000
         envFrom:
