--- a/sample/web/systemd/webapp.service
+++ b/sample/web/systemd/webapp.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/root/web/source
-ExecStart=/usr/bin/node /root/web/server.js
+ExecStart=/usr/bin/node /root/web/source/server.js
 Restart=always
 RestartSec=10
 
